--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3"
 services:
-  # postgres:
-  #   image: library/postgres:13
-  #   container_name: postgres
-  #   restart: on-failure
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: "postgres"
-  #     POSTGRES_DB: postgres
-  #   volumes:
-  #     - db-data:/var/lib/postgresql/data
-  #     - ./postgres/:/docker-entrypoint-initdb.d/
-  #   ports:
-  #     - "5432:5432"
+#  postgres:
+#    image: library/postgres:13
+#    container_name: postgres-service
+#    restart: on-failure
+#    environment:
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: "postgres"
+#      POSTGRES_DB: postgres
+#    volumes:
+#      - db-data:/var/lib/postgresql/data
+#      - ./postgres/:/docker-entrypoint-initdb.d/
+#    ports:
+#      - "5432:5432"
 
   gateway:
     image: griffire/lab4-gateway
@@ -31,7 +31,7 @@ services:
     build:
       context: ./v2/python_v2/reservation
       dockerfile: Dockerfile
-    container_name: reservation
+    container_name: reservation5
     restart: on-failure
     ports:
       - "8070:8070"
