--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -14,12 +14,37 @@ jobs:
       - uses: docker/setup-buildx-action@v2
 
       # TODO build, publish to docker hub, deploy to k8s
+      
+      
+      - name: Build images
+            timeout-minutes: 10
+            run: docker-compose build
 
+          - name: Dockerhub Login
+            uses: docker/login-action@v2
+            with:
+              Username: ${{secrets.DOCKER_HUB_LOGIN}}
+              password: ${{secrets.DOCKER_HUB_PSWD}}
+
+          - name: Push imagess
+            run: docker-compose push
+
+          - name: Deploy
+            run: |
+              kubectl config set-cluster cluster-v1 --server="${{secrets.YNDX_ADDR}}" --insecure-skip-tls-verify=true
+              kubectl config set-credentials "${{secrets.YNDX_LOGIN}}" --token="${{secrets.YNDX_TOKEN}}"
+              kubectl config set-context default --cluster="cluster-v1" --user="${{secrets.YNDX_LOGIN}}"
+              kubectl config use-context default
+              helm install helm1 ./myHelm/
+              sleep 60
+              
+              
+              
       - name: Run API Tests
         uses: matt-ball/newman-action@master
         with:
-          collection: <variant>/postman/collection.json
-          environment: <variant>/postman/environment.json
+          collection: v2/postman/collection.json
+          environment: v2/postman/environment.json
           delayRequest: 100
           reporters: '[ "cli" ]'
 
